[package]
name = "soundwork-bid"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soundwork_bid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-core = "0.7.2"
solana-security-txt = "1.1.1"
soundwork-create = { path = "../soundwork-create", features = ["cpi"] }
soundwork-list = { path = "../soundwork-list", features = ["cpi"] }
ahash="=0.8.7"
