[package]
name = "soundwork-create"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soundwork_create"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
mpl-core = "0.7.2"
solana-security-txt = "1.1.1"
solana-program = "1.18.20"
ahash="=0.8.7"
